<resources>
    <!--Application Name-->
    <string name="app_name">EmoQu</string>

    <!--Asset Daily Mood-->
    <string name="terrible_mood">Today seems really hard for you. Many challenges arise,
        making you feel tired and overwhelmed. Remember, it\'s okay to take a break.
    </string>
    <string name="bad_mood">Today doesn\'t seem like what you expected. Many things are disappointing,
        but focus on the things that can be improved and make you happy. Keep it up!
    </string>
    <string name="okay_mood">Today looked pretty good, with some good moments and some less than satisfying ones.
        Neutral days are also important for your balance.
    </string>
    <string name="good_mood">Today is a happy day for you. Many positive things happen and you feel satisfied with your achievements.
        Stay enthusiastic and face challenges with a smile!
    </string>
    <string name="excellent_mood">Today is truly extraordinary for you. Your day is filled with happiness and fulfilling achievements.
        Keep this positive energy going and enjoy every moment!
    </string>

    <!--Asset Daily Condition-->
    <string name="stressful_overload_condition">A lot of work to be done and a lack of time for refreshing caused you too stressed today.</string>
    <string name="fitness_fanatic_condition">It seems like you\'re really excited about outdoor activities today,
        which is reflected in the amount of time you spend on them.
    </string>
    <string name="active_explorer_condition">It looks like you\'ve spent a lot of time today on activities you enjoy,
        which is great, but remember to keep up with your responsibilities too.
    </string>
    <string name="balanced_achiever_condition">Today went smoothly for you, everything went according to plan and there were no significant obstacles.</string>

    <!--Asset Type Mood-->
    <string name="teribble">TERIBBLE</string>
    <string name="bad">BAD</string>
    <string name="okay">OKAY</string>
    <string name="good">GOOD</string>
    <string name="excellent">EXCELLENT</string>

    <!--Asset Type Contidion-->
    <string name="stressful_overload">STRESSFUL OVERLOAD</string>
    <string name="fitness_fanatic">FITNESS FANATIC</string>
    <string name="active_explorer">ACTIVE EXPLORER</string>
    <string name="balanced_achiever">BALANCED ACHIEVER</string>


    <!--Item List-->
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="activity_array">
        <item>Dating</item>
        <item>Eating</item>
        <item>Entertainment</item>
        <item>Self Care</item>
        <item>Sleep</item>
        <item>Study</item>
        <item>Travelling</item>
        <item>Work</item>
        <item>Workout</item>
    </string-array>

    <!--Another Strings-->
    <string name="register">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_app">Welcome to</string>
    <string name="slogan">EmoQu: Your Personal Diary</string>
    <string name="welcome_message">Want to know yourself better? <b>EmoQu</b> is ready to help you here!</string>
    <string name="login_question">Already have an account? Sign In</string>
    <string name="register_question">Don\'t have an account yet? Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add">Add</string>
    <string name="menu_today">Today</string>
    <string name="menu_report">Report</string>
    <string name="today_page">Today</string>
    <string name="report_page">Report</string>
    <string name="add_page">Add Page</string>
    <string name="add_activity">Add Activity</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="text_my_activities">My Activities</string>
    <string name="text_activity_mood">Activity Mood</string>
    <string name="text_activity_time">Time</string>
    <string name="text_activity_notes">Notes</string>
    <string name="greeting_moods">Hi, how\'s your activity?</string>
    <string name="terrible_label">Terrible</string>
    <string name="bad_label">Bad</string>
    <string name="okay_label">Okay</string>
    <string name="good_label">Good</string>
    <string name="excellent_label">Excellent</string>
    <string name="title_summary_report">Summary Report</string>
    <string name="note_message">Note : This sentiment analysis is based on data processing results from user-entered notes</string>
    <string name="title_sentiment_analysis">Sentiment Analysis</string>
    <string name="title_your_activities">Total Activity Duration</string>
    <string name="title_activity_recommend">Activities That You Can Do</string>
    <string name="list_recommend_activity">List recommend activity</string>
    <string name="text_our_recommendations">Our Recommendations</string>
    <string name="activity_question">What activities affect your mood like this?</string>
    <string name="activity_label">Activities</string>
    <string name="duration_label">Duration</string>
    <string name="duration">Duration in minutes</string>
    <string name="activities">Activities</string>
    <string name="notes">Notes</string>
    <string name="notes_example">Example Notes: \nHari ini aku senang banget karena mendapatkan pengumuman magang di perusahaan komputer, main hp dan mengabarkan teman.</string>
    <string name="title_add_activity">Add Activity</string>
    <string name="save_button">Save</string>
    <string name="duration_graph">Duration Graph</string>
    <string name="nlp_graph">NLP Graph</string>
    <string name="about_default">Keep Smile Everyday!☺️</string>
    <string name="mood">mood</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="daily_mood">Daily Mood</string>
    <string name="daily_condition">Daily Condition</string>
    <string name="image_type_report">Image type report</string>
    <string name="title_report_condition">You are</string>
    <string name="title_report_mood">Your Mood This Week </string>
    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="success_logout">Logged out successfully</string>
    <string name="back_button">Back button</string>
    <string name="click_to_see_the_daily_report">Click to see the Daily Report</string>
    <string name="your_are">Your Are</string>
    <string name="next">Next</string>
    <string name="your_daily_mood">Your Daily Mood</string>
</resources>