<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="48dp"
    android:paddingHorizontal="16dp"
    android:background="#FAFEC9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/light_text_grey_12"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/your_are"/>

    <TextView
        android:id="@+id/tv_type_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/light_text_grey_12"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/fitness_fanatic"/>

    <ImageView
        android:id="@+id/iv_type_report"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:adjustViewBounds="true"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_type_report"
        android:src="@drawable/fitness_fanatic"/>

    <TextView
        android:id="@+id/tv_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/light_text_grey_12"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/fitness_fanatic_condition"/>


</LinearLayout>