<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="48dp"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/light_text_grey_12"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        tools:text="@string/title_report_mood"/>

    <TextView
        android:id="@+id/tv_type_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/light_text_grey_12"
        android:textStyle="bold"
        android:gravity="center"
        tools:text="OKAY"/>

    <ImageView
        android:id="@+id/iv_type_report"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginVertical="60dp"
        android:contentDescription="@string/image_type_report"
        tools:src="@drawable/emoji_okay"/>

    <TextView
        android:id="@+id/tv_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/light_text_grey_12"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        tools:text="@string/bad_mood"/>


</LinearLayout>