<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background_main"
    android:paddingVertical="48dp"
    android:paddingHorizontal="16dp"
    tools:context=".ui.auth.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/welcome_app"
        android:textColor="@color/light_text_grey_12"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="100"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:text="@string/slogan"
        android:textColor="@color/light_text_grey_12"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        tools:alpha="100"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan"
        tools:ignore="MissingConstraints"
        tools:src="@drawable/register" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/first_name"
        android:textSize="14sp"
        android:textColor="@color/light_text_grey_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login"
        tools:alpha="100" />

    <com.capstone.emoqu.component.CustomEditText
        android:id="@+id/ed_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:hint="@string/first_name"
        android:background="@drawable/tv_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/last_name"
        android:textSize="14sp"
        android:textColor="@color/light_text_grey_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_first_name"
        tools:alpha="100" />

    <com.capstone.emoqu.component.CustomEditText
        android:id="@+id/ed_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:hint="@string/last_name"
        android:background="@drawable/tv_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="@color/light_text_grey_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_last_name"
        tools:alpha="100" />

    <com.capstone.emoqu.component.EditTextEmail
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:background="@drawable/tv_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/light_text_grey_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        tools:alpha="100" />

    <com.capstone.emoqu.component.EditTextPassword
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:background="@drawable/tv_background"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/confirm_password"
        android:textSize="14sp"
        android:textColor="@color/light_text_grey_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        tools:alpha="100" />

    <com.capstone.emoqu.component.EditTextPassword
        android:id="@+id/ed_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/tv_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
        tools:ignore="MissingConstraints" />

    <com.capstone.emoqu.component.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/ed_confirm_password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/login_question"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/light_text_grey_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:alpha="100" />

</androidx.constraintlayout.widget.ConstraintLayout>